refactor: Rebrand to KINETIC.IO and update component metadata
This commit rebrands the project from `uivault.dev` to `KINETIC.IO` across the application's metadata and UI elements.

Additionally, it significantly refactors the `constants.tsx` file, replacing the placeholder `kinetic-loaders` component with a richer set of component definitions. These new definitions include detailed descriptions, interaction models, motion logic, use cases, and difficulty levels for components such as `TectonicAccordion`, `TrailCursor`, and `KineticStatus`.

The `Explorer.tsx` and `DetailView.tsx` components have also been updated to reflect these new component definitions and their associated demo imports.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uivault.dev---temporal-ui-lab",
+  "name": "kinetic.io---temporal-ui-lab",
   "private": true,
   "version": "0.0.0",
   "type": "module",
